Gave container div fixed width value to avoid project changing size with overflow

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-    width: max-content;
+    width: 500px;
     margin: 0 auto;
 }
 
